--- a/content/structures/posts.yaml
+++ b/content/structures/posts.yaml
@@ -2,3 +2,7 @@ title: Posts
 tree:
   -
     entry: 00cd941e-b9d6-407a-b1a2-451391033e91
+  -
+    entry: efc97929-1f42-41ce-853f-77f7bff47aff
+  -
+    entry: f5f95973-39c9-4d83-9943-86c6ee6ab730
