--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@
 /public/hot
 /public/storage
 /public/vendor/statamic
+/public/js
+/public/css
+/public/images
+/public/fonts
+/public/mix-manifest.json
 /storage/*.key
 /vendor
 /.idea
@@ -12,3 +17,4 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 .env
+.DS_Store
