--- a/content/structures/pages.yaml
+++ b/content/structures/pages.yaml
@@ -1,4 +1,8 @@
 title: Pages
 expects_root: true
 root: home
-tree: []
+tree:
+  -
+    entry: 0c8e59ef-7572-44d0-b682-962154d2d1e3
+  -
+    entry: b49a898e-7f81-4d57-8a52-5233ed92d8c6
