--- a/package.json
+++ b/package.json
@@ -12,5 +12,15 @@
     "devDependencies": {
         "cross-env": "^5.1",
         "laravel-mix": "^2.0"
+    },
+    "dependencies": {
+        "@ohseesoftware/tailwind-config": "^1.0.7",
+        "@tailwindcss/custom-forms": "^0.2.1",
+        "color": "^3.1.2",
+        "highlight.js": "^9.17.1",
+        "laravel-mix-purgecss": "^4.2.0",
+        "postcss-import": "^12.0.1",
+        "postcss-nested": "^4.2.1",
+        "tailwindcss": "^1.1.4"
     }
 }
