Latest on site conversion.

--- a/content/structures/pages.yaml
+++ b/content/structures/pages.yaml
@@ -6,3 +6,5 @@ tree:
     entry: 0c8e59ef-7572-44d0-b682-962154d2d1e3
   -
     entry: b49a898e-7f81-4d57-8a52-5233ed92d8c6
+  -
+    entry: afa57fac-f3a6-431f-97e2-11da4ec9f80a
