--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "ohseesoftware/laravel-server-analytics": "^2.0",
         "statamic/cms": "3.0.*@beta"
     },
     "require-dev": {
