--- a/resources/blueprints/post.yaml
+++ b/resources/blueprints/post.yaml
@@ -4,6 +4,15 @@ sections:
     display: Main
     fields:
       -
+        handle: category
+        field:
+          max_items: 1
+          mode: select
+          type: taxonomy
+          localizable: false
+          display: Category
+          validate: required
+      -
         handle: content
         field:
           buttons:
@@ -20,30 +29,26 @@ sections:
             - table
             - code
             - codeblock
+            - strikethrough
           container: assets
           save_html: false
           toolbar_mode: fixed
           link_noopener: false
           link_noreferrer: false
           target_blank: false
-          reading_time: false
+          reading_time: true
           fullscreen: true
           allow_source: true
           type: bard
           localizable: false
           display: Content
-      -
-        handle: video
-        field:
-          type: video
-          localizable: false
-          display: Video
-      -
-        handle: category
-        field:
-          max_items: 1
-          mode: select
-          type: taxonomy
-          localizable: false
-          display: Category
-          validate: required
+          sets:
+            video:
+              display: Video
+              fields:
+                -
+                  handle: video
+                  field:
+                    type: video
+                    localizable: false
+                    display: Video
