Transfering more posts over from previous blog.

--- a/content/structures/posts.yaml
+++ b/content/structures/posts.yaml
@@ -8,3 +8,27 @@ tree:
     entry: 85cb5243-6886-451e-8222-e69054e6b96d
   -
     entry: ae3a3478-d482-466a-a6c1-3afc58f0d628
+  -
+    entry: 7e952336-ed89-4c2e-9236-7e0b491868dd
+  -
+    entry: 591d97d2-95dd-42a2-b78d-08a4b4d39584
+  -
+    entry: b5b12014-df86-4c73-9a3e-60e047a2797b
+  -
+    entry: d35a66ea-7c55-4131-bc75-7c4b3f2e4b20
+  -
+    entry: 1c7708f0-42ca-4a28-bcc4-53f01bdcf82c
+  -
+    entry: c45f959d-e288-4bc5-9ada-4fd80facade0
+  -
+    entry: 300e372f-bf79-4741-b3aa-4fb7a0adfc70
+  -
+    entry: 4e94e532-747f-423e-88cb-f04dfe581aa3
+  -
+    entry: 4974f4ad-970a-4af1-954f-5923b98fb0ef
+  -
+    entry: 1ce9a7cd-6ff5-4a7e-8442-3872c02f63e6
+  -
+    entry: c50a32a4-7418-44ca-b9b9-da6d1eced58f
+  -
+    entry: 23625f8f-415a-470c-b61e-66c2e0742f0b
