Add draft articles, add meta tags.

--- a/content/structures/posts.yaml
+++ b/content/structures/posts.yaml
@@ -32,3 +32,15 @@ tree:
     entry: c50a32a4-7418-44ca-b9b9-da6d1eced58f
   -
     entry: 23625f8f-415a-470c-b61e-66c2e0742f0b
+  -
+    entry: 65d2453e-5c8d-467a-b4d1-da3a0b5e1a68
+  -
+    entry: 8e5a202f-257b-43fe-9af8-462bd2a15227
+  -
+    entry: 282d2165-4598-4f28-9f08-5fc590a13be8
+  -
+    entry: 12d2bcaf-6617-4678-b6f8-f0e22404387f
+  -
+    entry: 3a7da28c-2b03-40c9-a57c-27692e7ebb04
+  -
+    entry: f21da89e-8b6d-46df-ab05-c9b9b914327f
