Add public dirs to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 /public/hot
 /public/storage
 /public/vendor/statamic
+/public/js
+/public/css
+/public/images
 /public/fonts
 /public/mix-manifest.json
 /storage/*.key
