Add page for RSS feed.

--- a/content/structures/pages.yaml
+++ b/content/structures/pages.yaml
@@ -8,3 +8,5 @@ tree:
     entry: b49a898e-7f81-4d57-8a52-5233ed92d8c6
   -
     entry: afa57fac-f3a6-431f-97e2-11da4ec9f80a
+  -
+    entry: 65ede336-9f41-4b20-bae3-cd3cd9435d24
