Update support for static site generation.

--- a/content/structures/pages.yaml
+++ b/content/structures/pages.yaml
@@ -10,3 +10,5 @@ tree:
     entry: afa57fac-f3a6-431f-97e2-11da4ec9f80a
   -
     entry: 65ede336-9f41-4b20-bae3-cd3cd9435d24
+  -
+    entry: 5f447f6d-f3c8-40d2-9b94-249c0987898a
