Clean up some styles, remove algolia search. Add post for moving search drop down to alpine.js.

--- a/content/structures/posts.yaml
+++ b/content/structures/posts.yaml
@@ -44,3 +44,5 @@ tree:
     entry: 3a7da28c-2b03-40c9-a57c-27692e7ebb04
   -
     entry: f21da89e-8b6d-46df-ab05-c9b9b914327f
+  -
+    entry: 005366ed-c4de-4132-965f-e85fa62e8909
