Add redirects. Add analytics page.

--- a/content/structures/footer.yaml
+++ b/content/structures/footer.yaml
@@ -1,11 +1,14 @@
 title: Footer
 tree:
   -
+    title: Analytics
+    url: /analytics
+  -
+    title: RSS
+    url: /feed
+  -
     title: Twitter
     url: 'https://twitter.com/owenconti'
   -
     title: YouTube
     url: 'https://youtube.com/owenconti'
-  -
-    title: RSS
-    url: /feed
