--- a/content/structures/pages.yaml
+++ b/content/structures/pages.yaml
@@ -12,3 +12,5 @@ tree:
     entry: 65ede336-9f41-4b20-bae3-cd3cd9435d24
   -
     entry: 5f447f6d-f3c8-40d2-9b94-249c0987898a
+  -
+    entry: 38749164-c700-4a20-8081-35d5f6d199cf
