--- a/content/structures/posts.yaml
+++ b/content/structures/posts.yaml
@@ -46,3 +46,5 @@ tree:
     entry: f21da89e-8b6d-46df-ab05-c9b9b914327f
   -
     entry: 005366ed-c4de-4132-965f-e85fa62e8909
+  -
+    entry: 933a74ae-8324-4ba9-90b3-3fe67559b7dd
