Add post on using the `noparse` tag.

--- a/content/structures/posts.yaml
+++ b/content/structures/posts.yaml
@@ -48,3 +48,5 @@ tree:
     entry: 005366ed-c4de-4132-965f-e85fa62e8909
   -
     entry: 933a74ae-8324-4ba9-90b3-3fe67559b7dd
+  -
+    entry: 5ecfe15f-3810-40b5-a626-597e81530656
