Add post for deploying a statamic site to Netlify

--- a/content/structures/posts.yaml
+++ b/content/structures/posts.yaml
@@ -50,3 +50,5 @@ tree:
     entry: 933a74ae-8324-4ba9-90b3-3fe67559b7dd
   -
     entry: 5ecfe15f-3810-40b5-a626-597e81530656
+  -
+    entry: be26187e-6159-438e-ab08-12b7e8770dc3
