--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 /public/images
 /public/fonts
 /public/mix-manifest.json
+/public/robots.txt
+/config/statamic/protect.php
 /storage/*.key
 /vendor
 /users
