--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
         "laravel-mix-purgecss": "^4.2.0",
         "postcss-import": "^12.0.1",
         "postcss-nested": "^4.2.1",
-        "tailwindcss": "^1.1.4"
+        "tailwindcss": "^1.2.0-canary.5"
     }
 }
