Remove Bangers font. Display code with examples. Update typography styles.

--- a/resources/blueprints/post.yaml
+++ b/resources/blueprints/post.yaml
@@ -69,3 +69,7 @@ sections:
                     type: textarea
                     localizable: false
                     display: 'Example Content'
+                -
+                  handle: show_example
+                  field:
+                    type: toggle
