Add Gist fieldset. Change Faking the Queue post to use Gist.

--- a/resources/blueprints/post.yaml
+++ b/resources/blueprints/post.yaml
@@ -73,3 +73,12 @@ sections:
                   handle: show_example
                   field:
                     type: toggle
+            gist:
+              display: Gist
+              fields:
+                -
+                  handle: gist_url
+                  field:
+                    type: text
+                    localizable: false
+                    display: 'Gist URL'
