Update code blocks to use gists, style tweaks.

--- a/content/structures/footer.yaml
+++ b/content/structures/footer.yaml
@@ -8,7 +8,7 @@ tree:
     url: /feed
   -
     title: Twitter
-    url: 'https://twitter.com/owenconti'
+    url: 'https://ohsee.link/twitter'
   -
     title: YouTube
-    url: 'https://youtube.com/owenconti'
+    url: 'https://ohsee.link/youtube'
