--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,6 @@
     "description": "Statamic",
     "keywords": ["statamic", "cms", "flat file", "laravel"],
     "type": "project",
-    "repositories": [{
-        "type": "path",
-        "url": "../oh-see-gists"
-    }],
     "require": {
         "php": "^7.1.3",
         "algolia/algoliasearch-client-php": "^2.5",
@@ -15,7 +11,7 @@
         "laravel/tinker": "^1.0",
         "laravel/vapor-cli": "^1.6",
         "laravel/vapor-core": "^2.5",
-        "ohseesoftware/oh-see-gists": "dev-master",
+        "ohseesoftware/oh-see-gists": "^1.0",
         "statamic/cms": "3.0.*@beta",
         "statamic/static-site-generator": "dev-master"
     },
