--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,12 @@
     "description": "Statamic",
     "keywords": ["statamic", "cms", "flat file", "laravel"],
     "type": "project",
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com:owenconti/webmentions.git"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "algolia/algoliasearch-client-php": "^2.5",
