--- a/resources/blueprints/collections/posts/post.yaml
+++ b/resources/blueprints/collections/posts/post.yaml
@@ -8,7 +8,7 @@ sections:
         field:
           max_items: 1
           mode: select
-          type: taxonomy
+          type: terms
           localizable: false
           display: Category
           validate: required
