--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "laravel/vapor-core": "^2.5",
         "mattrothenberg/webmentions": "dev-master",
         "ohseesoftware/oh-see-gists": "^1.0",
-        "statamic/cms": "3.0.*@beta",
-        "statamic/static-site-generator": "dev-master"
+        "statamic/cms": "^3.0",
+        "statamic/ssg": "^0.2.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
