--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 /public/fonts
 /public/mix-manifest.json
 /public/robots.txt
+/resources/public
 /storage/*.key
 /config/statamic/protect.php
 /vendor
