--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
     },
     "devDependencies": {
         "cross-env": "^5.1",
-        "laravel-mix": "^2.0"
+        "laravel-mix": "^2.0",
+        "svelte": "^3.30.0",
+        "svelte-loader": "^2.13.6"
     },
     "dependencies": {
-        "@ohseesoftware/tailwind-config": "^1.0.7",
+        "@ohseesoftware/tailwind-config": "^1.3.0",
         "@tailwindcss/custom-forms": "^0.2.1",
         "alpinejs": "^1.7.0",
+        "autoprefixer": "^9.8.6",
         "color": "^3.1.2",
-        "laravel-mix-purgecss": "^4.2.0",
+        "laravel-mix-svelte": "^0.1.6",
+        "postcss": "^7.0.35",
         "postcss-import": "^12.0.1",
         "postcss-nested": "^4.2.1",
-        "tailwindcss": "^1.2.0-canary.5"
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
+        "vue": "^2.6.12",
+        "vue-template-compiler": "^2.6.12"
     }
 }
