--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dependencies": {
         "@ohseesoftware/tailwind-config": "^1.3.0",
         "@tailwindcss/custom-forms": "^0.2.1",
+        "@tailwindcss/typography": "^0.3.1",
         "alpinejs": "^1.7.0",
         "autoprefixer": "^9.8.6",
         "color": "^3.1.2",
