--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
         "@tailwindcss/typography": "^0.3.1",
         "alpinejs": "^1.7.0",
         "autoprefixer": "^9.8.6",
+        "chrome-aws-lambda": "^5.5.0",
         "color": "^3.1.2",
         "laravel-mix-svelte": "^0.1.6",
         "postcss": "^7.0.35",
         "postcss-import": "^12.0.1",
         "postcss-nested": "^4.2.1",
+        "puppeteer-core": "^5.5.0",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
         "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.12"
