feat: Try generating og images at build time

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,4 @@
 [build]
   functions = 'functions'
+  publish = 'storage/app/static'
+  command = 'npm run production && composer install && php please search:update default && php please ssg:generate && npm run build-og-images'
