--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
         "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "serve": "npx serve storage/app/static",
+        "run-build-og-images": "node ./scripts/build-og-images.js",
+        "build-og-images": "npm-run-all -p serve run-build-og-images"
     },
     "devDependencies": {
         "cross-env": "^5.1",
@@ -24,10 +22,13 @@
         "chrome-aws-lambda": "^5.5.0",
         "color": "^3.1.2",
         "laravel-mix-svelte": "^0.1.6",
+        "npm-run-all": "^4.1.5",
         "postcss": "^7.0.35",
         "postcss-import": "^12.0.1",
         "postcss-nested": "^4.2.1",
+        "puppeteer": "^5.5.0",
         "puppeteer-core": "^5.5.0",
+        "serve": "^11.3.2",
         "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.1",
         "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.12"
