--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "laravel/vapor-core": "^2.9",
         "mattrothenberg/webmentions": "dev-master",
         "ohseesoftware/oh-see-gists": "^1.0",
-        "statamic/cms": "^3.0",
+        "statamic/cms": "3.0.32",
         "statamic/ssg": "^0.2.0"
     },
     "require-dev": {
