--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "@ohseesoftware/tailwind-config": "^1.3.0",
         "@tailwindcss/custom-forms": "^0.2.1",
+        "@tailwindcss/postcss7-compat": "npm:@tailwindcss/postcss7-compat@^2.0.3",
         "@tailwindcss/typography": "^0.3.1",
         "alpinejs": "^1.7.0",
         "autoprefixer": "^9.8.6",
