--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,8 @@
         "laravel/vapor-core": "^2.9",
         "mattrothenberg/webmentions": "dev-master",
         "ohseesoftware/oh-see-gists": "^2.0",
-        "statamic/cms": "3.0.44",
-        "statamic/ssg": "^0.2.0"
+        "statamic/cms": "3.1.5",
+        "statamic/ssg": "^0.4.0"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
@@ -58,6 +58,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "pre-update-cmd": [
+            "Statamic\\Console\\Composer\\Scripts::preUpdateCmd"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi",
