--- a/resources/blueprints/collections/bookmarks/bookmark.yaml
+++ b/resources/blueprints/collections/bookmarks/bookmark.yaml
@@ -6,8 +6,9 @@ sections:
       -
         handle: title
         field:
-          input_type: text
           type: text
+          required: true
+          input_type: text
           localizable: false
           listable: hidden
           display: Title
@@ -28,3 +29,13 @@ sections:
           listable: hidden
           display: URL
           validate: required|url
+  sidebar:
+    fields:
+      -
+        handle: slug
+        field:
+          type: slug
+          required: true
+          localizable: true
+          validate:
+            - 'unique_entry_value:{collection},{id},{site}'
