--- a/resources/blueprints/collections/redirects/redirect.yaml
+++ b/resources/blueprints/collections/redirects/redirect.yaml
@@ -4,6 +4,11 @@ sections:
     display: Main
     fields:
       -
+        handle: title
+        field:
+          type: text
+          required: true
+      -
         handle: redirect_location
         field:
           character_limit: 0
@@ -11,3 +16,13 @@ sections:
           localizable: false
           display: 'Redirect URL'
           validate: required
+  sidebar:
+    fields:
+      -
+        handle: slug
+        field:
+          type: slug
+          required: true
+          localizable: true
+          validate:
+            - 'unique_entry_value:{collection},{id},{site}'
