--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,14 @@
 [build]
   functions = 'functions'
   publish = 'storage/app/static'
-  command = 'npm run production && composer install && php please search:update default && php please ssg:generate && npm run build-og-images'
+  command = 'sed -i \"s|TOKEN_PLACEHOLDER|${OHSEESNAPS_TOKEN}|g\" netlify.toml && npm run production && composer install && php please search:update default && php please ssg:generate && npm run build-og-images'
 
 [[headers]]
   for = "/feed"
   [headers.values]
 	  Content-Type = "application/rss+xml"
+
+[[redirects]]
+  from = "/snap"
+  to = "https://ohseesnaps.com?token=TOKEN_PLACEHOLDER"
+  status = 301
