--- a/netlify.toml
+++ b/netlify.toml
@@ -11,4 +11,15 @@
 [[redirects]]
   from = "/snap"
   to = "https://ohseesnaps.com?token=TOKEN_PLACEHOLDER"
+  force = true
   status = 301
+
+[[redirects]]
+  from = "/goals"
+  to = "/posts/goals-for-2021"
+  status = 200
+
+[[redirects]]
+  from = "/*"
+  to = "/404"
+  status = 404
