Update styles for headings, typography. Update OG image styles.

--- a/content/trees/navigation/navigation.yaml
+++ b/content/trees/navigation/navigation.yaml
@@ -9,5 +9,5 @@ tree:
     title: Analytics
     url: /analytics
   -
-    title: RSS
-    url: /rss
+    title: Products
+    url: https://ohseesoftware.com
